--- a/style.css
+++ b/style.css
@@ -135,7 +135,13 @@ body {
     bottom: 0px;
     right: 0px;
     vertical-align: bottom;
+    /*border: thin black solid;/**/
+    width: 100%;
     padding: 15px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .btn.togglebutton {
