--- a/style.css
+++ b/style.css
@@ -112,13 +112,19 @@ body {
 }
 
 #bottomButtons {
-    margin-right: auto;
-    margin-left: auto;
+    width: 100%;
+    max-height: 500px;
     margin-top: 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.btn-toolbar div {
+    display: inline;
 }
 
 #bottomButtons *.btn {
-    display: inline;
     padding: 10px;
     font-size: 20px;
 }
