--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    height: 90vh;
+    overflow-y: auto;
+    height: 95vh;
 }
 
 .calculator .btn.btn-num {
@@ -114,7 +115,7 @@ body {
 
 #bottomButtons {
     width: 100%;
-    max-height: 500px;
+    height: 10vh;
     margin-top: 10px;
     overflow-x: auto;
     overflow-y: hidden;
